school-system/src/main/java/com/example/school/system/error/ExistingSchoolError.java
package com.example.school.system.error;

public class ExistingSchoolError extends RuntimeException {
    public ExistingSchoolError(String message) {
        super(message);
    }

}
